--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,17 +13,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - uses: gradle/wrapper-validation-action@v2
 
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
