--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,11 @@ jobs:
         name: build-log
         path: build.log
 
+    - name: List APK files
+      run: find app/build/outputs -name "*.apk" || true
+
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        path: app/build/outputs/apk/**/*.apk
